--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
 
     <string name="menu_Mantenimiento">Mantenimiento</string>
     <string name="menu_Reparar">Reparar</string>
+    <style name="feito"></style>
 
 </resources>
