--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,7 @@
 <resources>
     <string name="app_name">android_Resource</string>
-    <string name="menu_QRCODE">QRCODE</string>
-    <string name="menu_VOZ">VOZ</string>
-    <string name="menu_Tareas">Tareas</string>
-
-    <string name="menu_Reparar">Reparar</string>
     <style name="feito"></style>
     <style name="feito2"></style>
+    <style name="EstadoTarefas"></style>
 
 </resources>
