--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">android_Resource</string>
+    <string name="app_name">RA2PI</string>
     <style name="feito"></style>
     <style name="feito2"></style>
     <style name="EstadoTarefas"></style>
